--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <a href="https://discord.gg/c6jPknCa" class="card"><i class="bi bi-discord" style="color: #5539cc"></i></a>
       <a href="https://github.com/NYPDdev" class="card"> <i class="bi bi-github"></i></a>
         <a href="https://instagram.com/nypd.io" class="card"> <i class="bi bi-instagram"></i></a>
+       <a href="https://open.spotify.com/artist/4vWkutc3P3foMIC41dTNvA" class="card"> <i class="bi bi-spotify"></i></a>
+       <a href="mailto:nypd594@gmail.com" class="card"> <i class="bi bi-envelope"></i></a>
       </div>
     </div>
   </body>
