--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1 class="title">nypd.</h1>
    <div class="biobox">
-     <h3><strong>nypd lol | nypdv1 all plats.</strong></h3>
+     <h3><strong>nypd lol | nypdv1 all plats. | nypd594@gmail.com </strong></h3>
    </div>
      <div class="container">
       <a href="https://discord.gg/c6jPknCa" class="card"><i class="bi bi-discord" style="color: #5539cc"></i></a>
