--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <head>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
-<link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
 </head>
-  <body>
-    <h1 class="title">nypd.</h1>
-   <div class="biobox">
-     <h3><strong>nypd lol | nypdv1 all plats. | nypd594@gmail.com </strong></h3>
-   </div>
-     <div class="container">
-      <a href="https://discord.gg/c6jPknCa" class="card"><i class="bi bi-discord" style="color: #5539cc"></i></a>
-      <a href="https://github.com/NYPDdev" class="card"> <i class="bi bi-github"></i></a>
-        <a href="https://instagram.com/nypd.io" class="card"> <i class="bi bi-instagram"></i></a>
-       <a href="https://open.spotify.com/artist/4vWkutc3P3foMIC41dTNvA" class="card"> <i class="bi bi-spotify"></i></a>
-       <a href="mailto:nypd594@gmail.com" class="card"> <i class="bi bi-envelope"></i></a>
-      </div>
-    </div>
-  </body>
+<body>
+  <h1 class="title">nypd.</h1>
+  <div class="biobox">
+    <h3><strong>nypd lol | nypdv1 all plats. | nypd594@gmail.com </strong></h3>
+  </div>
+  <div class="container">
+    <a href="https://discord.gg/c6jPknCa" class="card"><i class="bi bi-discord" style="color: #5539cc"></i></a>
+    <a href="https://github.com/NYPDdev" class="card"><i class="bi bi-github"></i></a>
+    <a href="https://instagram.com/nypd.io" class="card"><i class="bi bi-instagram"></i></a>
+    <a href="https://open.spotify.com/artist/4vWkutc3P3foMIC41dTNvA" class="card"><i class="bi bi-spotify"></i></a>
+    <a href="mailto:nypd594@gmail.com" class="card"><i class="bi bi-envelope"></i></a>
+  </div>
+
+  <!-- Spotify Widget -->
+  <div class="spotify-widget" style="display: flex; justify-content: center; margin-top: 20px;">
+    <iframe src="https://open.spotify.com/embed/artist/4vWkutc3P3foMIC41dTNvA" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  </div>
+</body>
