--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   </div>
   <div class="container">
     <a href="https://discord.gg/njQ29BprpN" class="card"><i class="bi bi-discord" style="color: #5539cc"></i></a>
-    <a href="https://roblox.com/users/166366279" class="card">
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="32" height="32" fill="currentColor">
-    <path d="M448 64L64 128l64 320 384-64-64-320zm-160 256a32 32 0 1 1 0-64 32 32 0 0 1 0 64z"/>
-  </svg>
-</a
+        <a href="https://roblox.com/users/166366279" class="card><i class="bi bi-square"</i></a>
     <a href="https://instagram.com/nypd.io" class="card"><i class="bi bi-instagram"></i></a>
     <a href="https://open.spotify.com/artist/4vWkutc3P3foMIC41dTNvA" class="card"><i class="bi bi-spotify"></i></a>
     <a href="mailto:nypd594@gmail.com" class="card"><i class="bi bi-envelope"></i></a>
